[fix] header logo spacing

--- a/src/sass/module/_header.sass
+++ b/src/sass/module/_header.sass
@@ -4,3 +4,7 @@
 
 .logo
   padding: 12% 0 calc(12% - 14px) 0
+  +mq($bp-md)
+    padding: 10% 0 calc(10% - 14px) 0
+  +mq($bp-lg)
+    padding: 8% 0 calc(8% - 14px) 0
